--- a/index.html
+++ b/index.html
@@ -4,38 +4,99 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <title>Flexbox</title>
+        <script src="https://kit.fontawesome.com/da63b81e86.js" crossorigin="anonymous"></script>
+        <title>Prosko</title>
     </head>
     <body>
-        <header>
-            <span>
-                <a href="#" id="logo">Logo</a>
-            </span>
+        <header>            
             <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
+                <i class="fa-solid fa-bars" style="color: #000000;"></i>
+                <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                <a href="#" id="logo">Logo</a>
+                <i class="fa-solid fa-user" style="color: #000000;"></i>
+                <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             </nav>
+            <img src="img/alexis-chloe-FcgxMCkjwEo-unsplash.jpg" alt="Image of a woman sitting on the ground with her legs crossed">
         </header>
         <main>
-            <h1>Hjem</h1>
-            <section class="default-flex">
-                <h2>Who are shopping for?</h2>
+            <h1>ProSko</h1>
+            <section>
                 <article>
-                    <img src="https://placehold.co/600x400" alt="Image category for women">
-                    <h3>Women</h3>
+                    <h2>Women</h2>
+                    <img src="img/franco-figueroa-bHrnn1h_5YY-unsplash.jpg" alt="Image category for women">
                 </article>
                 <article>
-                    <img src="https://placehold.co/600x400" alt="Image category for men">
-                    <h3>Men</h3>
+                    <h2>Men</h2>
+                    <img src="img/wieger-stienstra-t2LACMcVNgA-unsplash.jpg" alt="Image category for men">
                 </article>
                 <article>
-                    <img src="https://placehold.co/600x400" alt="Image category for kids">
-                    <h3>kids</h3>
+                    <h2>Children</h2>
+                    <img src="img/chris-hardy-1JHDnBniINE-unsplash.jpg" alt="Image category for kids">
                 </article>
             </section>
+            <section>
+                <h3>Brands</h3>
+                <ul class="brands">
+                    <li>
+                        <img src="img/adidas-311450_640.jpg" alt="Brand image">
+                    </li>
+                    <li>
+                        <img src="img/animal-2028258_640.jpg" alt="Brand image">
+                    </li>
+                    <li>
+                        <img src="img/black-307583_640.jpg" alt="Brand image">
+                    </li>
+                    <li>
+                        <img src="img/fire-303309_640.jpg" alt="Brand Image">
+                    </li>
+                    <li>
+                        <img src="img/silhouette-3313481_640.jpg" alt="Brand Image">
+                    </li>
+                    <li>
+                        <img src="img/w-2538524_640.jpg" alt="Brand image">
+                    </li>
+                </ul>
+            </section>
+            <section class="products">
+                <img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes">
+                <img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes">
+            </section>
         </main>
+        <footer>
+            <section>
+                <h1>Prosko</h1>
+                <p>Welcome to our online store! ProSko is an e-commerce platform that specializes in footwear for people of all ages. Our mission is to offer a pair of shoes for every individual. We provide a diverse range of options, from premium brands like Bugatti and Timberland to more budget-friendly choices such as Adidas and Nike. Our selection is continually expanding, with new products being added regularly.</p>
+                <p>In partnership with environmental organizations, we sell both new and used shoes to reduce our environmental footprint. Additionally, we package all our shoes in eco-friendly materials. At ProSko, we offer free shipping on orders over $100 and have a hassle-free return policy in case you're not satisfied with your purchase. Thank you for choosing ProSko for all your footwear needs!</p>
+            </section>
+            <section>
+                <h3>About us</h3>
+                <ul>
+                    <li>
+                        <h4>Customer Club<h4>
+                        <a href="#"><i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a>
+                    </li>
+                    <li>
+                        <h4>Privacy Policy<h4>
+                        <a href="#"><i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a>
+                    </li>
+                    <li>
+                        <h4>Purchase Terms<h4>
+                        <a href="#"><i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a>
+                    </li>
+                    <li>
+                        <h4>Frequently Asked Questions<h4>
+                        <a href="#"><i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3>Follow us</h3>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </section>
+        </footer>
     </body>
 </html>
