Added some css and buttons

--- a/index.html
+++ b/index.html
@@ -16,22 +16,28 @@
                 <i class="fa-solid fa-user" style="color: #000000;"></i>
                 <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             </nav>
-            <img src="img/alexis-chloe-FcgxMCkjwEo-unsplash.jpg" alt="Image of a woman sitting on the ground with her legs crossed">
+            <img src="img/alexis-chloe-FcgxMCkjwEo-unsplash.jpg" alt="Image of a woman sitting on the grpping-texto>und with her legs crossed">
+            <span class="overlapping-text">Tekst over bilde</span>
+            <button class="button">See our products &rarr;</button> 
         </header>
         <main>
-            <h1>ProSko</h1>
             <section>
+                <h1>ProSko</h1>
                 <article>
                     <h2>Women</h2>
                     <img src="img/franco-figueroa-bHrnn1h_5YY-unsplash.jpg" alt="Image category for women">
+                    <button class="button">See our products &rarr;</button> 
                 </article>
                 <article>
                     <h2>Men</h2>
                     <img src="img/wieger-stienstra-t2LACMcVNgA-unsplash.jpg" alt="Image category for men">
+                    <button class="button">See our products &rarr;</button> 
                 </article>
                 <article>
                     <h2>Children</h2>
                     <img src="img/chris-hardy-1JHDnBniINE-unsplash.jpg" alt="Image category for kids">
+                    <span class="overlapping-text">Tekst over bilde</span>
+                    <button class="button">See our products &rarr;</button> 
                 </article>
             </section>
             <section>
@@ -58,6 +64,7 @@
                 </ul>
             </section>
             <section class="products">
+                <h3>Products</h3>
                 <img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes">
                 <img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes">
             </section>
@@ -72,19 +79,19 @@
                 <h3>About us</h3>
                 <ul>
                     <li>
-                        <h4>Customer Club<h4>
+                        <h4>Customer Club</h4>
                         <a href="#"><i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a>
                     </li>
                     <li>
-                        <h4>Privacy Policy<h4>
+                        <h4>Privacy Policy</h4>
                         <a href="#"><i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a>
                     </li>
                     <li>
-                        <h4>Purchase Terms<h4>
+                        <h4>Purchase Terms</h4>
                         <a href="#"><i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a>
                     </li>
                     <li>
-                        <h4>Frequently Asked Questions<h4>
+                        <h4>Frequently Asked Questions</h4>
                         <a href="#"><i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a>
                     </li>
                 </ul>
@@ -92,11 +99,23 @@
             <section>
                 <h3>Follow us</h3>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><i class="fa-brands fa-twitter" style="color: #000000;"></i></li>
+                    <li><i class="fa-brands fa-instagram" style="color: #000000;"></i></li>
+                    <li><i class="fa-brands fa-facebook" style="color: #000000;"></i></li>
+                    <li><i class="fa-brands fa-tiktok" style="color: #000000;"></i></li>
                 </ul>
             </section>
+            <section>
+                <h3>Payment Methods</h3>
+                <ul>
+                    <li><i class="fa-brands fa-paypal" style="color: #000000;"></i></li>
+                    <li><i class="fa-brands fa-stripe" style="color: #000000;"></i></li>
+                    <li><i class="fa-brands fa-cc-visa" style="color: #000000;"></i></li>
+                    <li><i class="fa-brands fa-cc-mastercard" style="color: #000000;"></i></li>
+                </ul>
+            </section>
+            <button class="cookies"><i class="fa-solid fa-cookie-bite fa-2xl" style="color: #000000;"></i></button>
+            <button class="contact"><i class="fa-solid fa-message fa-2xl" style="color: #000000;"></i></button>
         </footer>
     </body>
 </html>
